--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,16 @@
 <h1><%= @restaurant.name %></h1>
-<p><%=@restaurant.address %></p>
-<p><%=@restaurant.phone_number %></p>
-<p><%=@restaurant.category %></p>
+  <p><%=@restaurant.address %></p>
+  <p><%=@restaurant.phone_number %></p>
+  <p><%=@restaurant.category %></p>
+
+    <ul>
+      <% @restaurant.reviews.each do |review|  %>
+      <li> <%= review.content %>  |  <%= review.rating %></li>
+      <% end %>
+
+
+    </ul>
+
+<%= link_to "Add a review to this restaurant", new_restaurant_review_path(@restaurant) %>
 
 <%= link_to "Back to main page", restaurants_path %>
